--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "expo": "^27.0.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-restart": "0.0.7",
+    "react-native-vector-icons": "latest",
     "react-navigation": "^2.12.1",
-    "react-navigation-material-bottom-tabs": "^0.3.0",
-    "react-native-vector-icons": "latest"
+    "react-navigation-material-bottom-tabs": "^0.3.0"
   }
 }
