--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "^27.0.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-chart-kit": "^1.1.6",
     "react-native-restart": "0.0.7",
     "react-native-vector-icons": "latest",
     "react-navigation": "^2.12.1",
